# TestService

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  justfile  pyproject.toml
migrations/versions/: a82a3fd10ff1_initial_migration.py
test_service/: api.py  config.py  crud.py  database.py  dataclasses.py  dependencies.py  endpoints.py  errors.py  main.py  models.py  queue_manager.py  schemas.py  shemas.py  sockets_manager.py  tokens.py
tests/: socket_test.html  test_test_service.py
utils/: uvicorn_config.ini
