[tool.poetry]
name = "test_service"
version = "0.1.0"
description = ""
authors = ["Adamozo <naworsk.adam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
pika = "^1.3.2"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
